--- a/index.html
+++ b/index.html
@@ -1,121 +1,76 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interaktive Firmenkarte mit Chart</title>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script>
+  // 1) Karte initialisieren (Zentrum Deutschland, Zoom 5)
+  const map = L.map('map').setView([51.1657, 10.4515], 5);
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  // 2) OpenStreetMap-Tiles als Hintergrund
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '© OpenStreetMap-Mitwirkende'
+  }).addTo(map);
 
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  // 3) GeoJSON laden und Marker + Popups mit Pie-Chart erstellen
+  fetch('standorte.geojson')
+    .then(response => response.json())
+    .then(data => {
+      L.geoJSON(data, {
+        onEachFeature(feature, layer) {
+          const { name, projekte } = feature.properties;
+          // Status zählen
+          const counts = { 'In Arbeit': 0, 'Planung': 0, 'Abgeschlossen': 0 };
+          projekte.forEach(p => {
+            if (counts[p.status] !== undefined) counts[p.status]++;
+          });
 
-  <!-- eigenes Stylesheet -->
-  <link rel="stylesheet" href="assets/style.css" />
+          // Daten und Labels für das Diagramm
+          const labels = ['In Arbeit', 'Pipeline', 'Abgeschlossen'];
+          const values = [
+            counts['In Arbeit'],
+            counts['Planung'],
+            counts['Abgeschlossen']
+          ];
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    #map {
-      width: 100%;
-      height: 100%;
-    }
-    .popup-content {
-      text-align: center;
-    }
-    .popup-content h4 {
-      margin: 0 0 0.5em;
-    }
-    .popup-content canvas {
-      display: block;
-      margin: 0 auto;
-    }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
+          // Eindeutige Canvas-ID
+          const canvasId = 'chart-' + name.replace(/\s+/g, '-');
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // Karte initialisieren
-    const map = L.map('map').setView([51.1657, 10.4515], 5);
+          // Popup-HTML mit Canvas-Element
+          const popupHtml = `
+            <div class="popup-content">
+              <h4>${name}</h4>
+              <canvas id="${canvasId}" width="150" height="150"></canvas>
+            </div>
+          `;
 
-    // OSM-Tiles
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '© OpenStreetMap-Mitwirkende'
-    }).addTo(map);
+          // Popup binden ohne autoPan
+          layer.bindPopup(popupHtml, { autoPan: false });
 
-    // GeoJSON laden und Popups mit Chart
-    fetch('standorte.geojson')
-      .then(res => res.json())
-      .then(data => {
-        L.geoJSON(data, {
-          onEachFeature(feature, layer) {
-            const { name, projekte } = feature.properties;
+          // Popup bei Hover öffnen
+          layer.on('mouseover', () => layer.openPopup());
+          // Kein Schließen beim mouseout:
+          // layer.on('mouseout', () => layer.closePopup());
 
-            // Projekt-Status zählen
-            const counts = { 'In Arbeit': 0, 'Pipeline': 0, 'Abgeschlossen': 0 };
-            projekte.forEach(p => {
-              if (counts[p.status] !== undefined) counts[p.status]++;
-            });
-
-            // Labels und Werte
-            const labels = ['In Arbeit', 'Pipeline', 'Abgeschlossen'];
-            const values = labels.map(l => counts[l]);
-
-            // Eindeutige Canvas-ID fürs Chart
-            const canvasId = 'chart-' + name.replace(/\s+/g, '-');
-
-            // Popup-HTML
-            const popupHtml = `
-              <div class="popup-content">
-                <h4>${name}</h4>
-                <canvas id="${canvasId}" width="150" height="150"></canvas>
-              </div>
-            `;
-
-            // Popup binden ohne autoPan, ohne closeButton, ohne closeOnClick
-            layer.bindPopup(popupHtml, {
-              autoPan: false,
-              closeButton: false,
-              closeOnClick: false
-            });
-
-            // Popup auf Hover öffnen
-            layer.on('mouseover', () => layer.openPopup());
-            // Kein Schließen beim Verlassen:
-            // layer.on('mouseout', () => layer.closePopup());
-
-            // Chart beim Öffnen rendern
-            layer.on('popupopen', () => {
-              const ctx = document.getElementById(canvasId).getContext('2d');
-              new Chart(ctx, {
-                type: 'pie',
-                data: {
-                  labels: labels,
-                  datasets: [{
-                    data: values,
-                    backgroundColor: ['#4e79a7', '#f28e2b', '#e15759']
-                  }]
+          // Chart zeichnen, wenn Popup geöffnet wird
+          layer.on('popupopen', () => {
+            const ctx = document.getElementById(canvasId).getContext('2d');
+            new Chart(ctx, {
+              type: 'pie',
+              data: {
+                labels,
+                datasets: [{
+                  data: values,
+                  backgroundColor: ['#4e79a7', '#f28e2b', '#e15759']
+                }]
+              },
+              options: {
+                plugins: {
+                  legend: { display: true, position: 'bottom' }
                 },
-                options: {
-                  plugins: {
-                    legend: { display: true, position: 'bottom' }
-                  },
-                  maintainAspectRatio: false
-                }
-              });
+                maintainAspectRatio: false
+              }
             });
-          }
-        }).addTo(map);
-      })
-      .catch(err => console.error('Fehler beim Laden der GeoJSON:', err));
-  </script>
-</body>
-</html>
+          });
+        }
+      }).addTo(map);
+    })
+    .catch(err => console.error('Fehler beim Laden der GeoJSON:', err));
+</script>
